# todo

./: .ascii-guard.toml  .coverage  .cursorignore  .cursorrules  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .shellspec  .yamllint  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_LOG.md  RELEASE_SUMMARY.md  TODO.md  TODO.md.bak  codecov.yml  install.sh  pyproject.toml  release-notes.md  release.sh  setup.sh  todo.ai  todo.ai ''  todo.bash  todo.zsh
.ai-todo/: config.yaml
.ai-todo/archives/: TODO_ARCHIVE_2026-01-28.md  TODO_ARCHIVE_2026-01-28_1.md
.ai-todo/state/: TODO.md  checksum
.cursor/: mcp.json
.cursor/rules/: bug-review-workflow.mdc  commit-prefixes.mdc  commit-standards.mdc  cursor-rules-guidelines.mdc  releases.mdc  (+14 more)
.github/: dependabot.yml  release-please-config.json  release-please-manifest.json
.todo.ai/: config.yaml
ai_todo/: __init__.py
developer/: setup-linters.sh
docs/: BASH_VS_ZSH_ANALYSIS.md  BUG_REPORTING_DESIGN.md  COMMIT_FORMAT_MIGRATION.md  COORDINATION_SETUP.md  CURSOR_RULES_MIGRATION.md  DEVELOPMENT_GUIDELINES.md  FAQ.md  GETTING_STARTED.md  GITHUB_API_COORDINATION_ANALYSIS.md  GIT_HOOKS_DESIGN.md  HYBRID_TASK_NUMBERING_DESIGN.md  INSTALLATION.md  MIGRATION_GUIDE.md  MULTI_USER_DESIGN.md  MULTI_USER_TOOL_RESEARCH.md  NUMBERING_MODES_GUIDE.md  NUMBERING_MODES_TEST_PLAN.md  README.md  README_PREVIEW_WITH_SMART_INSTALLER.md  RELEASE_NUMBERING_ANALYSIS.md  RELEASE_NUMBERING_MAPPING.md  RELEASE_PROCESS.md  SMART_INSTALLER_DESIGN.md  STRUCTURE.md  TODO_TAGGING_SYSTEM_DESIGN.md  USAGE_PATTERNS.md  api-terminology-analysis.md  batch-operations-design.md  cursorignore-design.md  linear_integration_assessment.md  linear_integration_design.md  linear_integration_review_266.md  mcp-resources-design.md  task-metadata-design.md
legacy/: todo.ai  todo.bash
release/: .prepare_state  AI_RELEASE_SUMMARY.md  RELEASE_NOTES.md  RELEASE_NOTES_2.2.0.md  RELEASE_NOTES_2.2.1.md  RELEASE_NUMBERING_ANALYSIS.md  RELEASE_PROCESS.md  RELEASE_SUMMARY.md  convert_zsh_to_bash.sh  publish_pypi.sh  release.sh
scripts/: check-forbidden-flags.sh  pre-commit-hook.sh  run-full-tests-periodic.sh  setup-git-hooks.sh  wait-for-ci.sh
tests/: TEST_PLAN.md  conftest.py  reset_test_data.py  run.zsh
todo_ai/: __init__.py
(+192 files in other folders)
