[project]
name = "todo-ai"
version = "3.0.0"
description = "AI-Agent First TODO List Tracker with MCP and CLI interfaces"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "pygithub>=1.59.0",
]

[project.scripts]
todo-ai = "todo_ai.cli.main:cli"
todo-ai-mcp = "todo_ai.mcp.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

